# PyMusicNotifier

./: .gitignore  README.md  pyproject.toml
src/: img_util.py  main.py  notifier.py  protocols.py  time_util.py
src/mail/: mail_template.html  mail_wrapper.py
src/soundclouds/: soundcloud_wrapper.py
src/spotify/: spotify_wrapper.py
