[project]
name = "pymusicnotifier"
version = "0.0.1"
authors = [{ name = "ZachVFX", email = "zachallrd@gmail.com" }]
description = "A simple notifier when a new song is released."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "filetype>=1.2.0",
    "jinja2>=3.1.6",
    "notify-py",
    "pendulum>=3.0.0",
    "python-dotenv>=1.1.0",
    "requests-cache>=1.2.1",
    "soundcloud-v2>=1.6.0",
    "spotipy>=2.25.1",
]

[tool.uv.sources]
notify-py = { git = "https://github.com/ms7m/notify-py.git" }
